basic gui working, instance rendering with dx12 working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ ADD_SUBDIRECTORY(DarkMatter)
 
 SET(SOURCES 
     app.c
-    gui.c
+    rendering/gui.c
 )
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
