broke up the rendering into multiple files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ ADD_SUBDIRECTORY(DarkMatter)
 SET(SOURCES 
     app.c
     rendering/gui.c
+    rendering/raster_pipeline.c
+    rendering/rt_pipeline.c
 )
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
