further abstraction with camera now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_SUBDIRECTORY(DarkMatter)
 
 SET(SOURCES 
     app.c
+    camera.c
     rendering/gui.c
     rendering/raster_pipeline.c
     rendering/rt_pipeline.c
