--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ ADD_SUBDIRECTORY(DarkMatter)
 SET(SOURCES 
     app.c
     camera.c
+    entities.c
+
     rendering/gui.c
     rendering/raster_pipeline.c
     rendering/rt_pipeline.c
