--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DarkMatter"]
 	path = DarkMatter
 	url = https://github.com/wesExpress/DarkMatter.git
+[submodule "lib/Nuklear"]
+	path = lib/Nuklear
+	url = https://github.com/Immediate-Mode-UI/Nuklear.git
